# task_1020

./: README.md
apps/app_adv_puAmr/code/: CMakeLists.txt  main.c
apps/app_adv_puAmr/code/AutoTask/: AutoTask.c  AutoTask.h
apps/app_adv_puAmr/code/CommOop/: CMakeLists.txt  Crc16.c  msgAcMeter.c  secModule.c  secModule.h
apps/app_adv_puAmr/code/Common698/: AppCommon.h  CMakeLists.txt  Common698.h
apps/app_adv_puAmr/code/Stat/: statlib.h  statmain.c
apps/app_adv_puAmr/code/app698main/: CMakeLists.txt  apducomm.c  appcomm.c  appreport.c  oopVarUpdate.c  oopservice.c  protocol698.c
apps/app_adv_puAmr/code/appinclude/: apducomm.h  appcrc16.h  appctrl.h  appipc.h  appoutmsg.h  appreport.h  oopservice.h
apps/app_adv_puAmr/code/area/anhui/: anhui_fun.c
apps/app_adv_puAmr/code/area/default/: default_fun.c
apps/app_adv_puAmr/code/area/fujian/: fujian_fun.c
apps/app_adv_puAmr/code/area/hubei/: hubei_fun.c
apps/app_adv_puAmr/code/area/jiangsu/: jiangsu_fun.c  lcmtrans.c
apps/app_adv_puAmr/code/area/shandong/: shandong_fun.c
apps/app_adv_puAmr/code/area/zhejiang/: zhejiang_fun.c
apps/app_adv_puAmr/code/commfun/: CMakeLists.txt  commfun.c
apps/app_adv_puAmr/code/communication/include/: comm.h  msg_comm.h  ppp_comm.h  proxy_comm.h
apps/app_adv_puAmr/code/communication/source/: app_comm.c  comm.c  comm_main.c  listen_comm.c  rs232_comm.c
apps/app_adv_puAmr/code/ctrl/: CMakeLists.txt  appctrl_alarm.c  appctrl_power.c  appctrl_protect.c
apps/app_adv_puAmr/code/ctrl/include/: appctrl_cfg.h  appctrl_comm.h  appctrl_protect.h  appctrl_remote.h
apps/app_adv_puAmr/code/event/: CMakeLists.txt  Event.c  EventComm.c  EventComm.h  EventFun.h  EventIO.c
apps/app_adv_puAmr/code/gui/: CMakeLists.txt  app_gui.c
apps/app_adv_puAmr/code/gui/include/: app_gui.h
apps/app_adv_puAmr/code/include/: CMakeLists.txt  OopAll.h  ad.h  ad73360.h  att7022.h  commuprot.h  data_type.h  gpio.h  layer_id.h  mettype.h  store_custom.h  update_ex.c
apps/app_adv_puAmr/code/msg/: CMakeLists.txt
apps/app_adv_puAmr/code/msg/include/: out_msg.h
apps/app_adv_puAmr/code/msg/source/: db_update.c  out_msg.c
apps/app_adv_puAmr/code/oop/: CMakeLists.txt
apps/app_adv_puAmr/code/oop/include/: commClass.h  oadInfoList.h
apps/app_adv_puAmr/code/oop/source/: class11.c  class12.c  class13.c  class14.c  class16.c  class17.c  class24.c  class26.c  class4.c  class8.c  class9.c  commClass.c  oopStorage.c
apps/app_adv_puAmr/code/pulse/: CMakeLists.txt
apps/app_adv_puAmr/code/pulse/source/: pulse.c
apps/app_adv_stAmr/code/: CMakeLists.txt
apps/app_base_acMeter/code/: CMakeLists.txt
apps/app_base_acMeter/code/ac_common/: ac_commdrv.c  ac_commdrv.h  ac_lib.h  ac_main.h  ac_mqtt.c  ac_redef.h  ac_save.h  db_update.h  msg_base.h
apps/app_base_acMeter/code/ac_oop/: class19.c  class2.c  class5.c  class7.c  class8.c  commClass.c  oadInfoList.h  oopStorage.c  oopStorage.h
apps/app_base_acMeter/code/ac_otherfun/: ac_otherfun.c
apps/app_base_acMeter/code/ac_sample/: ac_oadlist.c  ac_parser.c  ac_parser.h  ac_sample698.c
apps/app_base_acMeter/code/ac_update/: ac_update.c
apps/app_base_acMeter/code/include/: ac_otherfun.h  ac_update.h
apps/app_base_ccoRouter_FJ/code/: CMakeLists.txt
apps/app_base_ccoRouter_FJ/code/area/fujian/: fujian_fun.c
apps/app_base_ccoRouter_FJ/code/crt_common/: CcoCommdrv.c  CcoCommon.c  CcoCommon.h  CcoLib.h  CcoPrtl.h  CcoRedef.h
apps/app_base_ccoRouter_FJ/code/include/: CcoMain.h
apps/app_base_dbCenter/code/: CMakeLists.txt  dbCenterModule.c
apps/app_base_dbCenter/code/client/: WRecUDPtest.c  argv.c  hex2byte.c
apps/app_base_dbCenter/code/common/: CMakeLists.txt
apps/app_base_dbCenter/code/db/: cache.c  crc16.c  dbComm.c  dbDataInterface.c
apps/app_base_dbCenter/code/include/: dbCenterConfig.h.in
apps/app_base_dbCenter/code/server/: msgHandler.c  msgService.c
apps/app_base_dbCenter/code/utility/: CMakeLists.txt  globalConfiguration.c
apps/app_base_desktopGui/code/: CMakeLists.txt
apps/app_base_desktopGui/code/160-160/: debuginfo.cpp
apps/app_base_desktopGui/code/240-128/: CMakeLists.txt  configterminal.cpp  menulayer.cpp  template.cpp
apps/app_base_desktopGui/code/commfun/: desk_meter.c
apps/app_base_desktopGui/code/include/: OopAll.h  appreport.h  commdrv.h  desk_meter.h  layer.h  miniguidef.h  ykyd.h
apps/app_base_desktopGui/code/xml/: DynString.h  XMLite.cpp  xml.cpp
apps/app_base_desktopGuiQT/desktopGui/: CMakeLists.txt  desktopGui_zh_CN.ts  main.cpp
apps/app_base_desktopGuiQT/desktopGui/common/: common.h
apps/app_base_desktopGuiQT/desktopGui/desktop/: controlstatus.cpp  controlstatus.h  controlstatus.ui  desktop.cpp  login.ui  menu.cpp  menu.h  paramshow.cpp  powerbuy.ui
apps/app_base_desktopGuiQT/desktopGui/images/: source.qrc
apps/app_base_desktopGuiQT/desktopGui/msg/: msgthread.h
apps/app_base_mapManager/code/: CMakeLists.txt
apps/app_base_mapManager/code/appgui/: miniguidef.cpp
apps/app_base_mapManager/code/include/: OopAll.h  commfun.h  filelock.h  mdlmgr.h  mettype.h  ykyd.h
apps/app_base_mapManager/code/source/: Crc16.c  Mqtt.c  mdlcommon.c
apps/app_sys_smiOS/code/: CMakeLists.txt  smiOSModule.c
apps/app_sys_smiOS/code/app/: appManager.c
apps/app_sys_smiOS/code/appgui/: CMakeLists.txt  miniguidef.cpp
apps/app_sys_smiOS/code/common/: CMakeLists.txt
apps/app_sys_smiOS/code/docker/: CMakeLists.txt
apps/app_sys_smiOS/code/platform/: CMakeLists.txt  xlCmd.c
apps/app_sys_smiOS/code/server/: CMakeLists.txt  msgService.c
apps/app_sys_smiOS/code/system/: CMakeLists.txt  systemInfo.c  systemInfoControl.c
apps/app_sys_smiOS/code/utility/: authTool.c
include/: appmsg_struct.h  commdef.h  macro.h  (+7 more)
lib/code/appgui/160-160/: CMakeLists.txt  configpara.cpp  menulayer.cpp  pageInterface.cpp
lib/code/template/: CMakeLists.txt  task_base.c  trace_back.c
test/app_dbfunc_test/code/: CMakeLists.txt  main.c
test/app_dbfunc_test/code/include/: db_rw_interface.h  errCode.h  mes_struct.h  mqtt_proc.h  test_thread.h
test/app_dbfunc_test/code/source/: comm_log.c  db_rw_interface.c  mqtt_proc.c  msg_porc.c
(+764 files in other folders)
